src/main/metadata-excluded/objects/ObjectField__c.object
<CustomObject>
    <description>Data Dictionary Tool:  Field level details</description>
    <fields>
        <fullName>CRM_Factory_Field_Name__c</fullName>
        <description>The CRM Factory defined field name - from the CRM Factory data dictionary</description>
        <inlineHelpText>The CRM Factory defined field name - from the CRM Factory data dictionary</inlineHelpText>
        <label>CRM Factory Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Modified_Date__c</fullName>
        <description>Last date when the API name or field type has been changed</description>
        <inlineHelpText>Last date when the API name or field type has been changed</inlineHelpText>
        <label>Field Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <description>Salesforce formula field</description>
        <inlineHelpText>Salesforce formula field</inlineHelpText>
        <label>Formula</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>HelpText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saleforce formula or calculated field</description>
        <inlineHelpText>Saleforce formula or calculated field</inlineHelpText>
        <label>Is Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Updateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Updateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOV__c</fullName>
        <description>Picklist values</description>
        <label>LOV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSnapshot_Date__c</fullName>
        <label>Last Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Length</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandator__c</fullName>
        <label>Mandatory</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Picklist_Size__c</fullName>
        <label>Picklist Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_To__c</fullName>
        <label>Reference To</label>
        <length>111</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationships_Name__c</fullName>
        <label>Relationships Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Type__c</fullName>
        <description>Salesforce field data type</description>
        <inlineHelpText>Salesforce field data type</inlineHelpText>
        <label>SFDC Type</label>
        <picklist>
            <picklistValues>
                <fullName>STRING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PICKLIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CURRENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATETIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOOLEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOUBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFERENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOAP_Type__c</fullName>
        <label>SOAP Type</label>
        <picklist>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STRING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOOLEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATETIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOUBLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Values__c</fullName>
        <label>Sample Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SystemObject__c</fullName>
        <label>SystemObject</label>
        <referenceTo>SystemObject__c</referenceTo>
        <relationshipLabel>ObjectFields</relationshipLabel>
        <relationshipName>ObjectFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>&lt;System&gt;.&lt;Object&gt;.&lt;Field&gt;
SFDC.Account.Nickname__c</description>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Used_by_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify the standard fields that are used/not-used by the business</description>
        <inlineHelpText>Used to identify the standard fields that are used/not-used by the business</inlineHelpText>
        <label>Used by Business</label>
        <type>Checkbox</type>
    </fields>
    <label>ObjectField</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UniqueID__c</columns>
        <columns>NAME</columns>
        <columns>SFDC_Type__c</columns>
        <columns>SOAP_Type__c</columns>
        <columns>Length__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ObjectField Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>